@@ -105,12 +105,12 @@ tasks.withType(JavaCompile).configureEach {
 // NOTE: even when we drop JDK 8 support, we will still need a test task similar to this one for testing building
 // against a recent JDK and Error Prone version but then running on the oldest supported JDK and Error Prone version,
 // to check for binary compatibility issues.
-def jdk8Test = tasks.register("testJdk8", Test) {
+def epOldestTest = tasks.register("testErrorProneOldest", Test) {
     javaLauncher = javaToolchains.launcherFor {
-        languageVersion = JavaLanguageVersion.of(8)
+        languageVersion = JavaLanguageVersion.of(11)
     }
 
-    description = "Runs the test suite on JDK 8"
+    description = "Runs the test suite using the oldest supported version of Error Prone"
     group = LifecycleBasePlugin.VERIFICATION_GROUP
 
     // Copy inputs from normal Test task.
@@ -121,18 +121,26 @@ def jdk8Test = tasks.register("testJdk8", Test) {
     classpath = configurations.errorProneOldest + testTask.classpath
 
     testClassesDirs = testTask.testClassesDirs
-    jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
-    filter {
-        // JDK 8 does not support diamonds on anonymous classes
-        excludeTestsMatching "com.uber.nullaway.jspecify.GenericsTests.overrideDiamondAnonymousClass"
-        // tests cannot run on JDK 8 since Mockito version no longer supports it
-        excludeTestsMatching "com.uber.nullaway.SerializationTest.initializationError"
-        excludeTestsMatching "com.uber.nullaway.handlers.contract.ContractUtilsTest.getEmptyAntecedent"
-    }
+
+    jvmArgs += [
+            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            // Accessed by Lombok tests
+            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+    ]
+
 }
 
 tasks.named('check').configure {
-    dependsOn(jdk8Test)
+    dependsOn(epOldestTest)
 }
 
 // Create a task to build NullAway with NullAway checking enabled
